<resources>
    <string name="noknow_location">Unknown location</string>
    <string name="device_alram_setting">Alarm system</string>
    <string name="device_chaosu_title">Speed (km / h)</string>
    <string name="device_chaosu_title2">Duration (s)</string>
    <string name="cue_is_no_bits">Can not exceed %d bit</string>
    <string name="device_info_chaosu_title">Please enter speed (unit: km/h)</string>
    <string name="device_info_chaosu_title2">Please enter the duration of speeding (unit: sec).</string>
    <string name="device_alram_chaosu">Speeding alarm</string>
    <string name="device_config_juli">Positioning upload distance</string>
    <string name="user_info_logout_info">You have not saved the personal information of the second change, confirm return</string>
    <string name="cue_nickname_is_no_Emoji">Don not support emoticons</string>
    <string name="app_notify">Determine to open notification function？</string>
    <string name="cue_email_is_no">Mailbox format error</string>
    <string name="device_no_line">Device not online</string>
    <string name="device_info_ks">Are you sure to unlock?</string>
    <string name="device_info_door_close">Lock</string>
    <string name="device_info_door_open">Unlock</string>
    <string name="device_info_mode_default">(Default time interval 60 second)</string>
    <string name="location_dianya">Voltage: </string>
    <string name="device_info_chongqi">Restart</string>
    <string name="device_info__is_chongqi">Is it restarted?</string>
    <string name="device_info_version_mcu">MCU</string>
    <string name="device_install_goolemap">You have not installed Google map or map version too low.</string>
    <string name="device_info__confirm">Is the remote shutdown?</string>
    <string name="device_config_1inqing">Family number settings</string>
    <string name="device_info_nav_confirm">Do you want to perform navigation?</string>
    <string name="device_config_tonghua">Callback number settings</string>
    <string name="cue_is_no_max">Length must not be greater than 16</string>
    <string name="device_info_guanji">Power off</string>
    <string name="music_call">Call</string>
    <string name="other_nav">Navigation</string>
    <string name="other_info">information</string>
    <string name="language">US</string>
    <string name="app_name">SPIDER</string>
    <string name="file_provider">com.pgyersdk.provider</string>
    <string name="other_delete">Delete</string>
    <string name="other_cancel">Cancel</string>
    <string name="other_ensure">Ensure</string>
    <string name="other_save">Save</string>
    <string name="other_open">Open</string>
    <string name="other_close">Close</string>
    <string name="other_set">set up</string>
    <string name="login">Login</string>
    <string name="login_account">Enter account</string>
    <string name="login_email">Enter Email</string>
    <string name="login_passeord">Input password</string>
    <string name="login_login">Login</string>
    <string name="login_no_userinfo">Not available User data</string>
    <string name="register">Register</string>
    <string name="register_nickname">Nickname：</string>
    <string name="register_phone">Mobile phone：</string>
    <string name="register_email">Email：</string>
    <string name="register_code">Verification Code：</string>
    <string name="register_device_number">Device number：</string>
    <string name="register_device_name">Device name：</string>
    <string name="register_password">Password：</string>
    <string name="register_confirm_password">Confirm password：</string>
    <string name="register_get_code">Get validation code</string>
    <string name="register_get_Agreement">I have read the agreement and agree to accept the "user agreement"</string>
    <string name="register_Success">Registration is successful, please log in the email to activate.</string>
    <string name="main_location">Location</string>
    <string name="main_push_message">Alert List</string>
    <string name="main_sound_monitor">Sound Monitor</string>
    <string name="main_sound_monitor_bt">Monitor</string>
    <string name="location_acc">ACC：</string>
    <string name="location_nav">Navigation</string>
    <string name="location_state">State：</string>
    <string name="location_state_online">On-line</string>
    <string name="location_state_offline">Off-line</string>
    <string name="location_bvalid">Location bvalid：</string>
    <string name="location_bvalid_1">GPS</string>
    <string name="location_bvalid_2">LBS</string>
    <string name="location_bvalid_4">WiFi</string>
    <string name="location_door">DOOR：</string>
    <string name="location_electricity">Electricity：</string>
    <string name="location_location">Location：</string>
    <string name="location_time">Time：</string>
    <string name="location_gps_time">GPS Time：</string>
    <string name="location_gsm_time">GSM Time：</string>
    <string name="location_no_data">No data, pull down refresh to get the latest data</string>
    <string name="location_success">Success</string>
    <string name="location_fail">Device unresponsive</string>
    <string name="location_off_line">Dismantling the alarm</string>
    <string name="music_recording">Recording</string>
    <string name="music_macid">IMEI Number：</string>
    <string name="music_time">Recording duration：</string>
    <string name="music_start">Downloading</string>
    <string name="music_fail">Fail</string>
    <string name="music_Success">Success</string>
    <string name="music_play">Running</string>
    <string name="music_End">End</string>
    <string name="music_push">Click play</string>
    <string name="tra">Trajectory</string>
    <string name="tra_fast">X3</string>
    <string name="tra_medium">X2</string>
    <string name="tra_slow">X1</string>
    <string name="tra_start_time">Start Time</string>
    <string name="tra_end_time">End time</string>
    <string name="tra_cue_1">The date must not exceed the today</string>
    <string name="tra_cue_2">The number of days must be 1~3 days</string>
    <string name="tra_cue_3">Time format is incorrect</string>
    <string name="tra_today">ToDay</string>
    <string name="tra_yesterday">Yesterday</string>
    <string name="tra_yesterday_before">Day before yesterday</string>
    <string name="tra_custom">Custom</string>
    <string name="tra_year">Year</string>
    <string name="tra_month">Month</string>
    <string name="tra_day">Day</string>
    <string name="tra_lat">Lat：</string>
    <string name="tra_lng">Lng：</string>
    <string name="forgot_password">Forgot password</string>
    <string name="forgot_reset">Reset password</string>
    <string name="device_info">Device information</string>
    <string name="device_synchro">Sync</string>
    <string name="device_info_mydevice">My Devices</string>
    <string name="device_info_name">Name</string>
    <string name="device_info_imei">IMEI Number</string>
    <string name="device_info_acc">ACC</string>
    <string name="device_info_battery">Battery</string>
    <string name="device_info_door">Door</string>
    <string name="device_info_Oil_break_power_off">Oil break power off</string>
    <string name="device_info_GPS_not_positioned">GPS not positioned</string>
    <string name="device_info_Faster_than_20">Faster than 20KM/H</string>
    <string name="device_info_defense">Defense</string>
    <string name="device_info_recording">Record length settings</string>
    <string name="device_info_factory">Reset</string>
    <string name="device_info_setup">Device setting</string>
    <string name="device_info_version">Version</string>
    <string name="device_info_unbound">Unbound</string>
    <string name="device_recording_unit">S</string>
    <string name="device_info_unbound_confirm">Do you want to unbound the current device?</string>
    <string name="device_info_factory_confirm">Reset</string>
    <string name="device_info_break_power_confirm">Do you start breaking off the oil?</string>
    <string name="device_info_unbound_version_new">The device is the latest version!</string>
    <string name="device_info_new">No device information was received. Click sync to get the latest data</string>
    <string name="device_info_mode">choose work type：</string>
    <string name="device_info_mode_date">time：</string>
    <string name="device_info_mode_date_tag">(Upload a location each day according to the set time point after setting the time point)</string>
    <string name="device_info_mode_time">time interval：</string>
    <string name="device_info_mode_time_tag">(Default time interval 1440 minute,set up between 5-7200 minute.)</string>
    <string name="device_info_mode_second">time interval：</string>
    <string name="device_info_mode_second_tag">(Default time interval 60 second,set up between 10-1800 second.)</string>
    <string name="device_info_remove_time">work time：</string>
    <string name="device_info_remove_time_tag">(Default work time 20 minutes,set up between 3-60 minute.)</string>
    <string name="device_config_mode">work type</string>
    <string name="device_config">Device setting</string>
    <string name="device_config_spacing">Device upload interval</string>
    <string name="device_config_phonenum">Device phone number settings</string>
    <string name="device_config_sosnum">SOS phone number settings</string>
    <string name="device_config_num1">Number1</string>
    <string name="device_config_num2">Number2</string>
    <string name="device_config_num3">Number3</string>
    <string name="device_alram_remove">Dismantling the alarm</string>
    <string name="device_alram_remove_tag">extirpation alarm work type</string>
    <string name="device_alram">Alarm function</string>
    <string name="device_alram_door">Door alarm</string>
    <string name="device_alram_acc">ACC alarm</string>
    <string name="device_alram_blind">Blind alarm</string>
    <string name="device_alram_electricity">Low battery alarm</string>
    <string name="device_alram_displacement">Displacement alarm</string>
    <string name="device_alram_jones">External power failure alarm</string>
    <string name="device_alram_shock">Vibration alarm</string>
    <string name="device_alram_shock_1">Mode one</string>
    <string name="device_alram_shock_2">Mode two</string>
    <string name="device_alram_shock_3">Mode Three</string>
    <string name="user_info">User information</string>
    <string name="user_info_logout">Log out</string>
    <string name="user_info_logout_confirm">Do you want to quit the current account?</string>
    <string name="user_info_nikename">Nickname</string>
    <string name="user_info_account">Account number</string>
    <string name="user_info_password">Modify password</string>
    <string name="user_new_password">New password：</string>
    <string name="user_initial_password">Original password：</string>
    <string name="electronic_fence">Electronic fence</string>
    <string name="electronic_fence_add_ele">Add (up to 5)</string>
    <string name="electronic_fence_max_ele">The electronic fence adds up to 5</string>
    <string name="electronic_meter">M</string>
    <string name="electronic_zero">Radius cannot be 0</string>
    <string name="electronic_300">Radius must not be less than 300</string>
    <string name="electronic_core">Please click the map to set the center point of the fence!</string>
    <string name="electronic_name">Remarks</string>
    <string name="device_binding">Device binding</string>
    <string name="device_twocode">Barcode scanning</string>
    <string name="binding_please_enter_imei_number">Please enter the IMEI number to bind</string>
    <string name="binding_present">Current device：</string>
    <string name="binding">Binding</string>
    <string name="payment">Software payment</string>
    <string name="setting">Software settings</string>
    <string name="setting_version">APP version number</string>
    <string name="setting_updata">Updata</string>
</resources>