<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <include layout="@layout/layout_titlebar" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:background="@drawable/login_bg"
        android:gravity="center"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitXY"
                android:src="@drawable/login_1" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:scaleType="fitXY"
                android:src="@drawable/login_2" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="@dimen/layout_x_350"
            android:layout_height="0dp"
            android:layout_weight="4" >

            <EditText
                android:id="@+id/ed_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/ed_password"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/bt_user"
                android:background="@color/transparent"
                android:drawableLeft="@drawable/login_logo"
                android:drawablePadding="@dimen/layout_x_10"
                android:ems="10"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/layout_x_20" >

                <requestFocus />
            </EditText>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_x_2"
                android:layout_below="@+id/ed_username"
                android:background="@color/login_line" />

            <com.haoke.view.PassWordEdit
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/layout_y_40"
                android:background="@color/transparent"
                android:drawableLeft="@drawable/password_logo"
                android:drawablePadding="@dimen/layout_x_10"
                android:ems="10"
                android:hint="@string/login_passeord"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/layout_x_20" >
            </com.haoke.view.PassWordEdit>

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_x_2"
                android:layout_below="@+id/ed_password"
                android:background="@color/login_line" />

            <TextView
                android:id="@+id/tv_forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/view1"
                android:layout_marginTop="@dimen/layout_y_15"
                android:text="@string/forgot_password"
                android:textSize="@dimen/layout_x_15" 
                android:textColor="@color/white" />

            <Button
                android:id="@+id/bt_user"
                android:layout_width="@dimen/layout_x_40"
                android:layout_height="@dimen/layout_x_30"
                android:layout_alignBottom="@+id/ed_username"
                android:layout_alignParentRight="true"
                android:background="@drawable/down1" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="@dimen/layout_x_350"
            android:layout_height="0dp"
            android:layout_weight="5" >

            <Button
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_y_60"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/login_n"
                android:text="@string/login"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/bt_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_y_60"
                android:layout_alignLeft="@+id/bt_login"
                android:layout_below="@+id/bt_login"
                android:layout_marginTop="@dimen/layout_x_15"
                android:background="#fff"
                android:text="@string/register"
                android:textColor="@color/login_text" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>