<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rel_onclick"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_y_125"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="@dimen/layout_x_20" />

        <LinearLayout
            android:id="@+id/lin_record"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/shape_kuang"
            android:gravity="center" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/layout_x_8" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/music_macid"
                        android:textColor="@color/black"
                        android:textSize="@dimen/layout_x_20" />

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textColor="@color/black"
                        android:textSize="@dimen/layout_x_20" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/music_time"
                        android:textColor="@color/black"
                        android:textSize="@dimen/layout_x_20" />

                    <TextView
                        android:id="@+id/tv_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textColor="@color/black"
                        android:textSize="@dimen/layout_x_20" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/device_recording_unit"
                        android:textColor="@color/black"
                        android:textSize="@dimen/layout_x_20" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/bt_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:clickable="false"
                android:text="点击播放"
                android:textSize="@dimen/layout_x_17" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>